--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "~16.3.2",
     "react-router-dom": "~4.2.2",
     "react-textfit": "^1.1.0",
+    "react-tooltip": "^3.6.0",
     "semantic-ui-react": "~0.80.0",
     "sleep": "~5.1.1",
     "truffle-hdwallet-provider": "0.0.3",
