Update deploy scripts

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "serve:stop": "kill -9 `cat node.pid`",
     "bundle:dev": "webpack --mode development --config bundleConfig/webpack.rinkeby.config.js",
     "bundle:prod": "webpack --mode production --config bundleConfig/webpack.mainnet.config.js",
-    "start": "webpack-dev-server --mode development --open --ethNetwork=rinkeby",
+    "start:rinkeby": "webpack-dev-server --mode development --open --ethNetwork=rinkeby",
+    "start:mainnet": "webpack-dev-server --mode development --open --config bundleConfig/webpack.mainnet.config.js",
     "startOld": "react-scripts start",
     "buildOld": "react-scripts build",
     "ejectOld": "react-scripts eject",
